k8s/the-project/wx-rxtx/20-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wx-rxtx
  namespace: the-project
  labels:
    app: wx-rxtx
    env: dev
spec:
  selector:
    app: wx-rxtx
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
